<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_back">back</string>
    <string name="action_processing">Processing...</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="action_title_date_stamp">Date stamp</string>
    <string name="add_to">Add to</string>
    <string name="alert_camera_name_needed">Please input camera name!</string>
    <string name="alert_is_capturing_or_recording">Failed! Camera is capturing or recording!</string>
    <string name="alert_no_camera_found">No camera found!</string>
    <string name="alert_not_same_password">New passwords are not the same!</string>
    <string name="alert_old_pwd_verify_failed">Old password is not correct!</string>
    <string name="alert_pwd_needed">Please input password!</string>
    <string name="alert_uid_needed">Please input Uid!</string>
    <string name="alert_uid_repeated">Uid has already exsited!</string>
    <string name="app_exception">APP meets exception!</string>
    <string name="app_exit">Application exited !</string>
    <string name="app_exit_confirm">Press again to exit !</string>
    <string name="app_name">iSmart DV</string>
    <string name="burst_10">10 photos</string>
    <string name="burst_3">3 photos</string>
    <string name="burst_5">5 photos</string>
    <string name="burst_hs">Continuous</string>
    <string name="burst_off">OFF</string>
    <string name="button_check_current_wifi_list">Check current Wi-Fi</string>
    <string name="camera_abnormal">Camera abnormal!</string>
    <string name="camera_awake">Awake camera</string>
    <string name="camera_awake_failed">Failed to awake camera</string>
    <string name="camera_awake_success">Succeed to awake camera</string>
    <string name="camera_configuration_set">Set</string>
    <string name="camera_name_limit">Wi-Fi Name length must not more than 20</string>
    <string name="camera_pwd_setting">camera pwd setting</string>
    <string name="camera_setting">Setting</string>
    <string name="camera_sleep">Sleep camera</string>
    <string name="camera_sleep_alert">Connect to camera will lose if sleep camera,comfirm to do?</string>
    <string name="camera_wifi_configuration">Camera Wi-Fi configuration</string>
    <string name="camera_wifi_name">Camera Wi-Fi name</string>
    <string name="camera_wifi_password">Camera Wi-Fi password</string>
    <string name="capture">capture</string>
    <string name="capture_completed">Capture completed...</string>
    <string name="capture_start">Start capturing...</string>
    <string name="check_mac_fail">No permition in DEMO APP! Please contact with your APP Supplier!</string>
    <string name="check_wifi_policy">Please keep to always connecting Wi-Fi</string>
    <string name="connect_control">Connect and Control</string>
    <string name="current_size_not_supported_sound_off">The current size is not supported on or off sound</string>
    <string name="dateStamp_date">Date</string>
    <string name="dateStamp_date_and_time">Date and time</string>
    <string name="dateStamp_off">OFF</string>
    <string name="delay_capture">Delay capture</string>
    <string name="dialog_awake_all">All awake</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_btn_exit">Exit</string>
    <string name="dialog_btn_reconnect">Reconnect</string>
    <string name="dialog_cancel_downloading_failed">Failed to cancel downloading</string>
    <string name="dialog_cancel_downloading_succeeded">Succeeded to cancel downloading</string>
    <string name="dialog_capturing">Capturing</string>
    <string name="dialog_card_error">SD card error!</string>
    <string name="dialog_card_full">SD card is full</string>
    <string name="dialog_card_inserted">SD card inserted</string>
    <string name="dialog_card_lose">SD card does not exist</string>
    <string name="dialog_card_not_exist">SD card is not inserted, cannot perform capture/recording.</string>
    <string name="dialog_card_removed">SD card is removed</string>
    <string name="dialog_configuring">Configuring, please wait...</string>
    <string name="dialog_connect_failed">Connection failed, please retry.</string>
    <string name="dialog_connecting">Connecting...</string>
    <string name="dialog_connecting_to_cam">Connecting with camera...</string>
    <string name="dialog_delete_all">All delete</string>
    <string name="dialog_delete_failed_single">Error while deleting</string>
    <string name="dialog_deleting">Deleting...</string>
    <string name="dialog_deleting_failed_multi">Error while deleting, $1$ items not deleted,please check whether the files are locked or not</string>
    <string name="dialog_downloaded">$2$ pictures downloaded to \n$3$</string>
    <string name="dialog_downloaded_2">$2$ items downloaded to \n$3$</string>
    <string name="dialog_downloaded_single">Picture has been downloaded to\n$1$</string>
    <string name="dialog_downloaded_skipped">$2$ pictures downloaded.\n(Skipped $1$ videos and $4$ downloaded pictures)</string>
    <string name="dialog_downloaded_skipped_2">$2$ items downloaded.\n(Skipped $1$ downloaded items)</string>
    <string name="dialog_downloading">Downloading $1$/$2$...</string>
    <string name="dialog_downloading_single">Downloading...</string>
    <string name="dialog_failed">Operation failed, please retry.</string>
    <string name="dialog_init_network">Initializing Network...</string>
    <string name="dialog_invalid_ap">Doesn&apos;t seem to be connecting to a camera, please select another Wi-Fi!</string>
    <string name="dialog_local_memory_not_enough">Local memory is not enough to download</string>
    <string name="dialog_no_sd">No SD card, please insert one and retry</string>
    <string name="dialog_not_enough_space">Handset does not have enough storage, please delete some files and restart.</string>
    <string name="dialog_preview">Preview Loading...</string>
    <string name="dialog_reconnect">Reconnecting</string>
    <string name="dialog_reconnect_failed">Failed to reconnecting!</string>
    <string name="dialog_recording_card_full">Warning: SD card full, video recording stopped.</string>
    <string name="dialog_refreshing">Refreshing Wi-Fi...</string>
    <string name="dialog_sd_card_is_full">Warning: SD card full, cannot record or take pictures.</string>
    <string name="dialog_select_wifi">Select wifi!</string>
    <string name="dialog_timeout">Connection to camera failed, please ensure Wi-Fi connection is working.</string>
    <string name="dialog_wifi_lost">Cannot connect to Wi-Fi, please retry.</string>
    <string name="download_complete_result">Download completed,successed:$1$, failed:$2$</string>
    <string name="download_manager">Download Manager</string>
    <string name="download_progress">Has done: $1$ Wait: $2$ Failed: $3$</string>
    <string name="downloading_quit">All task of downloading will be cancelled,are you sure?</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="event_stream_abnormal">camera stream is abnormal!</string>
    <string name="frequency_50HZ">50HZ</string>
    <string name="frequency_60HZ">60HZ</string>
    <string name="function_not_impl">Sorry, it&apos;s in construction !</string>
    <string name="ga_trackingId">UA-36501679-1</string>
    <string name="gallery_cancel">Cancel</string>
    <string name="gallery_cannot_download_video">Cannot download video</string>
    <string name="gallery_cannot_view_video">Video viewing not supported</string>
    <string name="gallery_delete">Delete</string>
    <string name="gallery_delete_des">Confirm deleting $1$ files?</string>
    <string name="gallery_download">Download</string>
    <string name="gallery_download_msg">Confirm download $1$ files?</string>
    <string name="gallery_download_msg_2">Confirm download $1$ files? ($2$ skipped videos)</string>
    <string name="gallery_download_pic_msg">Confirm download $1$ pictures?</string>
    <string name="gallery_download_video_not_supported">Video downloading not supported</string>
    <string name="gallery_download_with_vid_msg">Total Files: $1$ Download Time: $2$ mins and $3$ seconds Confirm download?</string>
    <string name="gallery_exiting_share">Exiting Share</string>
    <string name="gallery_no_file_selected">No file selected</string>
    <string name="gallery_no_image">No files to download</string>
    <string name="no_files_found">No files found!</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="text_btpair">Bluetooth Pair</string>
    <string name="text_btpair_already_connect_cam">When you already connect to camera by Wi-Fi.</string>
    <string name="text_btpair_connect_cam">Connect to Your Camera</string>
    <string name="text_btpair_connect_operationsteps">Please click on the Done button to enter preview</string>
    <string name="text_btpair_connect_wifi">Wi-Fi Connect</string>
    <string name="text_btpair_done">Done</string>
    <string name="text_btpair_search_ble">Search BLE</string>
    <string name="text_btpair_search_camera">Search</string>
    <string name="text_btpair_setup">Setup</string>
    <string name="text_btpair_setup_camwifi">Pair camera success, you can setup camera Wi-Fi or just click Setup to keep default setting.</string>
    <string name="text_btpair_skip">SKIP</string>
    <string name="text_btpair_support_bt">For new camera, and the camera support Bluetooth.</string>
    <string name="text_ready_pair">Make sure your camera is ready for pairing and type the right PIN.</string>
    <string name="title_activity_add_new_cam">Add New Camera</string>
    <string name="title_fragment_btpair_begin">Pairing</string>
    <string name="title_fragment_btpair_completed">Completed</string>
    <string name="title_fragment_btpair_wifisetup">Wi-Fi setup</string>
    <string name="title_local_media">Media on My Phone</string>
    <string name="title_photo">Photo</string>
    <string name="title_video">Video</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>