<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/charcoal_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/toolbar_layout" android:background="@color/primary" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0100b6">
        <ImageButton android:id="@+id/back_btn" android:background="@drawable/selector_primary" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_arrow_back_white_24dp" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/navigation_size" android:textColor="@color/icons" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_activity_add_new_cam" android:layout_toRightOf="@+id/back_btn" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/first_title_size" android:textColor="@color/primary_light" android:id="@+id/save" android:background="@drawable/selector_primary" android:padding="10dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_btpair_done" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/text_btpair_already_connect_cam" style="@style/customTextviewStyleLight" />
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:weightSum="1.0">
            <Button android:id="@+id/bt_connect_camera" android:layout_width="UNKNOWN_DATA_0x1" android:text="@string/text_btpair_connect_wifi" android:layout_weight="0.5" style="@style/customButtonStyle02" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/text_btpair_support_bt" style="@style/customTextviewStyleLight" />
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:weightSum="1.0">
            <Button android:id="@+id/bt_pair" android:layout_width="UNKNOWN_DATA_0x1" android:text="@string/text_btpair" android:layout_weight="0.5" style="@style/customButtonStyle02" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
