<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/charcoal_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/toolbar_layout" android:background="@color/primary" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0100b6">
        <ImageButton android:id="@+id/back_btn" android:background="@drawable/selector_primary" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_arrow_back_white_24dp" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/navigation_size" android:textColor="@color/icons" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_fragment_btpair_completed" android:layout_toRightOf="@+id/back_btn" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/first_title_size" android:textColor="@color/primary_light" android:id="@+id/done_txv" android:background="@drawable/selector_primary" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_btpair_done" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_size_20" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/text_btpair_connect_cam" style="@style/customTextviewStyleLight" />
    <TextView android:textSize="@dimen/text_size_18" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/text_btpair_connect_operationsteps" style="@style/customTextviewStyleLight" />
</LinearLayout>
