<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/charcoal_gray" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/toolbar_layout" android:background="@color/primary" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0100b6">
        <ImageButton android:id="@+id/back_btn" android:background="@drawable/selector_primary" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_arrow_back_white_24dp" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/navigation_size" android:textColor="@color/icons" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_fragment_btpair_begin" android:layout_toRightOf="@+id/back_btn" android:layout_centerVertical="true" />
        <ImageButton android:id="@+id/refresh_btn" android:background="@drawable/selector_primary" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_refresh_white_24dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/text_ready_pair" style="@style/customTextviewStyleLight" />
    <ListView android:id="@+id/choose_blutTooth_list" android:background="@color/dark_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_margin="10dp" android:layout_weight="1.0" />
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:padding="20dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <Button android:id="@+id/button_bluetooth_search" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x2801" android:text="@string/text_btpair_search_camera" android:layout_weight="0.5" style="@style/customButtonStyle01" />
        <Button android:id="@+id/button_ble_search" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x2801" android:text="@string/text_btpair_search_ble" android:layout_weight="0.5" style="@style/customButtonStyle01" />
    </LinearLayout>
</LinearLayout>
